[+] printing detected currencies of processed accounts